Bug 97099 - Regression in 9ef8537e6 "drm/radeon: don't use fractional dividers on RS[78]80 if SS is enabled" (RV620)
Summary: Regression in 9ef8537e6 "drm/radeon: don't use fractional dividers on RS[78]8...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Radeon (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
: 97138 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-07-27 19:11 UTC by Jaime Velasco Juan
Modified: 2016-10-14 10:18 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Partial revert of the problematic commit (1.01 KB, patch)
2016-07-27 19:11 UTC, Jaime Velasco Juan
no flags Details | Splinter Review
Possible fix (1.20 KB, patch)
2016-08-12 14:26 UTC, Christian König
no flags Details | Splinter Review

Description Jaime Velasco Juan 2016-07-27 19:11:07 UTC
Created attachment 125352 [details] [review]
Partial revert of the problematic commit

According to the patch summary it shouldn't affect my system (Mobility Radeon HD3470, RV620) but it causes artifacts resembling moving waves in the displayed image and maybe also a headache.

Reverting the second hunk in the patch is enough to get it working again (I'll attach the revert).

Bisect log:

# bad: [523d939ef98fd712632d93a5a2b588e477a7565e] Linux 4.7
# good: [2dcd0af568b0cf583645c8a317dd12e344b1c72a] Linux 4.6
git bisect start 'v4.7' 'v4.6' '--' 'drivers/gpu/drm/radeon'
# good: [95306975e9dd38ba2775dd96cb29987ecc7d9360] Merge tag 'drm/tegra/for-4.7-rc1' of git://anongit.freedesktop.org/tegra/linux into drm-next
git bisect good 95306975e9dd38ba2775dd96cb29987ecc7d9360
# good: [84787c572d402644dca4874aba73324d9f8e3948] Merge branch 'akpm' (patches from Andrew)
git bisect good 84787c572d402644dca4874aba73324d9f8e3948
# good: [79b3c7164c18e2fe9e69b0dcc0d45bab7ae3c968] Merge branch 'drm-next-4.7' of git://people.freedesktop.org/~agd5f/linux into drm-next
git bisect good 79b3c7164c18e2fe9e69b0dcc0d45bab7ae3c968
# good: [ccaa2c12fba72f3e547d18e66820e2e6c5883113] drm/radeon: do not hard reset GPU while freezing on r600/r700 family
git bisect good ccaa2c12fba72f3e547d18e66820e2e6c5883113
# bad: [9ef8537e68941d858924a3eacee5a1945767cbab] drm/radeon: don't use fractional dividers on RS[78]80 if SS is enabled
git bisect bad 9ef8537e68941d858924a3eacee5a1945767cbab
# first bad commit: [9ef8537e68941d858924a3eacee5a1945767cbab] drm/radeon: don't use fractional dividers on RS[78]80 if SS is enabled
Comment 1 pavol 2016-07-30 14:21:36 UTC
*** Bug 97138 has been marked as a duplicate of this bug. ***
Comment 2 Jaime Velasco Juan 2016-08-11 16:15:23 UTC
CCed author as it seems the regression hasn't been noticed
Comment 3 Christian König 2016-08-12 14:12:48 UTC
I've noticed this bug, I'm just not sure what to do about it.

Essentially disabling fractional dividers for spread spectrum fixes the output for some people while it broke it for others.

I will prepare a patch to only apply it for RS780 and RS880 for now, cause those seem to be the most problematic ones.
Comment 4 Christian König 2016-08-12 14:26:02 UTC
Created attachment 125738 [details] [review]
Possible fix
Comment 5 Jaime Velasco Juan 2016-08-16 16:15:44 UTC
Thanks, the patch fixes the problem for me, as expected. I hope it doesn't break other setups. I understand having to lose time with these kind of workarounds must be very frustrating.
Comment 6 Christian König 2016-08-18 09:52:41 UTC
Thanks for testing.

Yeah, it's especially tricky when the hardware is already a couple of years old and even the people who created it don't remember all the nasty details.

The patch should show up in the next kernel release.
Comment 7 Alex 2016-09-02 08:10:15 UTC
provided patch works for me too, thanks. (radeon rv620 HD3450)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.